--- a/WebAppAutores/appsettings.Development.json
+++ b/WebAppAutores/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+             "Default": "Warning",
+            // "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "WebAppAutores": "Information"
         }
     },
     "ConnectionStrings": {
